# QuantInvestStrats

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  QIS_PACKAGE_STRUCTURE.md  QIS_QUALITY_CONSISTENCY_REPORT.md  README.md  pyproject.toml  pyvenv.cfg  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
notebooks/: multi_asset_factsheet.ipynb  multi_strategy.ipynb  performance_plots.ipynb  strategy_benchmark_factsheet.ipynb  strategy_factsheet.ipynb  us_presidential_election.ipynb
qis/: __init__.py  file_utils.py  local_path.py  local_paths.yaml  settings.yaml  sql_engine.py  test_data.py
qis/data/: ust.py  ust_rates.py  yf_data.py
qis/docs/: REMOVED_5_0.md  factsheets.md  frequency_convention_note.md  gallery.md  reporting_frequencies.md  sharpe_conventions.md
qis/examples/: README.md  asset_perf_report.py  bear_normal_bull_sharpe.py  best_returns.py  beta_hedged_funds.py  bootstrap_analysis.py  boxplot_conditional_returns.py  btc_asset_corr.py  btc_spy_corr.py  constant_notional.py  constant_weight_portfolios.py  create_sp500_universe.py  credit_spreads.py  europe_futures.py  ewma_multifactor_regression.py  figure_2ax.py  gaussian_mixure_scatter.py  generate_option_rolls.py  interpolation_infrequent_returns.py  leveraged_strategies.py  long_short.py  marginal_asset_contribution.py  momentum_indices.py  move_index.py  oakmark_analysis.py  ohlc_vol_analysis.py  overnight_returns.py  perf_external_assets.py  performance_visuals.py  performances.py  plot_ust_rates.py  portfolio_opt_backtest.py  price_plots.py  readme_performances.py  risk_return_frontier.py  rolling_performance.py  seasonality.py  sharpe_vs_sortino.py  simulate_quant_strats.py  test_ewm.py  (+10 more)
qis/examples/_helpers/: reporting_helpers.py
qis/examples/case_studies/: vix_beta_to_equities_bonds.py
qis/examples/core/: hf_benchmarks.py  perf_bbg_prices.py  price_plots.py  us_election.py
qis/examples/data_fetching/: long_vol_qis_universe.py
qis/examples/factsheets/: bbg_universe.py  multi_assets.py  multi_assets_reporting_frequencies.py  multi_strategy.py  multi_strategy_reporting_frequencies.py  pyblogs_reports.py  pybloqs_factsheets.py  strategy.py  strategy_benchmark.py  strategy_benchmark_reporting_frequencies.py  strategy_reporting_frequencies.py
qis/examples/market_data/: __init__.py  fx_cip_identity_yahoo_example.py  fx_hedging_example.py  fx_hedging_yahoo_example.py  fx_rates_data_bloomberg_example.py  fx_rates_data_yahoo_example.py
qis/examples/models/: bootstrap_analysis.py  example_multivariate_ols.py
qis/examples/notebooks/: multi_asset_factsheet.ipynb  performance_plots.ipynb  strategy_factsheet.ipynb  us_presidential_election.ipynb
qis/examples/plots/: scatter_with_regression.py
qis/examples/regimes/: us_election_regimes.py
qis/market_data/: MIGRATION_NOTES.md  README.md  __init__.py  factors_data.py  fx_hedging.py  fx_rates_data.py
qis/market_data/reports/: __init__.py  fx_hedging_report.py
qis/market_data/tests/: factors_data_test.py  fx_cip_identity_test.py  fx_rates_data_test.py
qis/models/: __init__.py  unsmoothing.py
qis/models/bootstrap/: bootstrap_numba.py
qis/models/linear/: auto_corr.py  corr_cov_matrix.py  ewm.py  ewm_convolution.py  ewm_factors.py  ewm_portfolio_risk.py  ewm_winsor_outliers.py  pca.py  plot_correlations.py  ra_returns.py
qis/models/ml/: regression_predictor.py  var_data.py
qis/models/stats/: bootstrap.py  gaussian_mixture.py  ohlc_vol.py  rolling_stats.py  test_bootstrap.py
qis/models/tests/: unsmoothing_comparison.py
qis/models/unsmoothing/: ar_lag.py  dimson_beta.py  factor_lag.py  joint_lag.py
qis/perfstats/: README.md  __init__.py  cond_regression.py  config.py  desc_table.py  drawdowns.py  fx_ops.py  perf_stats.py  perf_table.py  regime_classifier.py  returns.py  rolling_stats.py  signal_diagnostics.py  timeseries_bfill.py
qis/perfstats/tests/: cond_regression_test.py  returns_test.py  sharpe_conventions_test.py  test_sharpe_convention.py  test_signal_diagnostics.py
qis/plots/: __init__.py  bars.py  boxplot.py  contour.py  errorbar.py  heatmap.py  histogram.py  histplot2d.py  lineplot.py  pie.py  qqplot.py  scatter.py  stackplot.py  table.py  time_series.py  utils.py
qis/plots/derived/: classification_scatter.py  correlations.py  data_timeseries.py  desc_table.py  drawdowns.py  gantt_data_history.py  perf_table.py  price_history.py  prices.py  regime_class_table.py  regime_data.py  regime_pdf.py  regime_scatter.py  returns_heatmap.py  returns_scatter.py  signal_diagnostics_plot.py
qis/plots/reports/: econ_data_single.py  gantt_data_history.py  price_history.py  utils.py
qis/plots/tests/: boxplot_test.py  regime_scatter_test.py  scatter_test.py
qis/portfolio/: __init__.py  backtester.py  ewm_portfolio_risk.py  multi_portfolio_data.py  portfolio_data.py  signal_data.py
qis/portfolio/optimization/: opt_solvers.py  qp_solvers.py  rolling_portfolios.py
qis/portfolio/reports/: brinson_attribution.py  config.py  factsheet_facade.py  multi_asset_factsheet.py  multi_assets_factsheet.py  multi_strategy_factseet_pybloqs.py  multi_strategy_factsheet.py  multi_strategy_factsheet_pybloqs.py  overlays_smart_diversification.py  portfolio_factsheet.py  strategy_benchmark_factsheet.py  strategy_benchmark_factsheet_pybloqs.py  strategy_benchmark_tre_factsheet.py  strategy_factsheet.py  strategy_signal_factsheet.py
qis/portfolio/risk/: contributions.py  ewm_covar_risk.py  ewm_factor_model.py  factor_model.py
qis/portfolio/strats/: quant_strats_delta1.py  seasonal_strats.py
qis/resources/: etf_prices.csv  ust_rates.csv
qis/resources/xml/: 1990.xml  (+32 more)
qis/tests/: test_reporting_conventions.py  test_reporting_goldens.py
qis/utils/: README.md  __init__.py  annualisation.py  dates.py  desc_table.py  df_agg.py  df_cut.py  df_freq.py  df_groups.py  df_melt.py  df_ops.py  df_str.py  df_to_scores.py  df_to_weights.py  generic.py  global_consts.py  np_ops.py  ols.py  regression.py  sampling.py  struct_ops.py  timer.py
(+18 files in other folders)
