[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qis"
version = "4.0.3"
description = "Quantitative Investment Strategies (QIS) package implements Python analytics for visualisation of financial data, performance reporting, analysis of quantitative strategies"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Artur Sepp", email = "artursepp@gmail.com"},
]
maintainers = [
    {name = "Artur Sepp", email = "artursepp@gmail.com"},
]
keywords = [
    "quantitative finance",
    "investment strategies",
    "portfolio analytics",
    "financial data visualization",
    "backtesting",
    "performance attribution",
    "risk analysis",
    "financial statistics",
    "trading strategies",
    "portfolio optimization",
    "systematic strategies",
    "volatility",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"

dependencies = [
    "numba>=0.60.0",
    "numpy>=2.0",
    "scipy>=1.12.0",
    "statsmodels>=0.14.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "openpyxl>=3.1.0",
    "PyYAML>=6.0",
    "yfinance>=0.2.40",
    "pandas-datareader>=0.10.0",
]

[project.optional-dependencies]
reports = [
    "pybloqs>=1.2.13",
    "jinja2>=3.0.0",
]

visualization = [
    "plotly>=5.0.0",
]

io = [
    "pyarrow>=14.0.0",
    "fsspec>=2024.2.0",
]

database = [
    "psycopg2>=2.9.5",
    "SQLAlchemy>=2.0.0",
]

jupyter = [
    "jupyter>=1.0.0",
    "notebook>=6.5.0",
    "jupyterlab>=3.0.0",
    "ipykernel>=6.0.0",
    "ipywidgets>=8.0.0",
]

dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "ruff>=0.4",
]

all = [
    "qis[reports,visualization,io,database,jupyter]",
]

[project.urls]
Homepage = "https://github.com/ArturSepp/QuantInvestStrats"
Documentation = "https://github.com/ArturSepp/QuantInvestStrats/blob/master/README.md"
Repository = "https://github.com/ArturSepp/QuantInvestStrats.git"
Issues = "https://github.com/ArturSepp/QuantInvestStrats/issues"

[tool.setuptools.packages.find]
include = ["qis*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
qis = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --tb=short"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.coverage.run]
source = ["qis"]
omit = ["*/tests/*", "*/examples/*"]